--- a/src/components/FormValidation/FormValidation.scss
+++ b/src/components/FormValidation/FormValidation.scss
@@ -24,6 +24,11 @@
     cursor: pointer;
   }
 
+  .button.colorGreen:hover:not(:disabled) {
+    background: #34a853;
+    cursor: pointer;
+  }
+
   .input-group {
     display: flex;
     flex-direction: column;
