--- a/postlist-app/src/index.css
+++ b/postlist-app/src/index.css
@@ -13,3 +13,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.activeLink {
+  background-color: #009ddf;
+}
